# Python-Eagle-Eye

./: .env_copy  .gitignore  README.md  main.py  pyproject.toml  record_face.py  test.py
core/: face_manager.py  recognizer.py
