[project]
name = "face-guard"
version = "0.1.0"
description = ""
authors = [
    {name = "roman-skwortsoff"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime-gpu (>=1.22.0,<2.0.0)",
    "insightface (>=0.7.3,<0.8.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
